refactor: MDXRemote 수정

--- a/content/posts/spring_boot/tailwind-responsive-design.mdx
+++ b/content/posts/spring_boot/tailwind-responsive-design.mdx
@@ -2,8 +2,7 @@
 title: "Tailwind CSS로 반응형 웹 디자인 구현하기"
 description: "Tailwind CSS를 사용하여 모바일부터 데스크탑까지 완벽하게 대응하는 반응형 웹 디자인을 구현하는 방법을 알아봅니다."
 date: "2023-05-15"
-category: "웹 개발"
-slug: "tailwind-responsive-design"
+thumbnail: /posts/nextjs_blog/setup/thumbnail.png
 ---
 
 # Tailwind CSS로 반응형 웹 디자인 구현하기
