--- a/content/posts/spring_cloud/api-gateway-rbac.mdx
+++ b/content/posts/spring_cloud/api-gateway-rbac.mdx
@@ -2,7 +2,7 @@
 title: "[Spring Cloud] API Gateway를 사용한 RBAC 구현"
 description: "Spring Cloud Gateway를 활용하여 Spring Security 없이 역할 기반 접근 제어(RBAC)를 구현하는 방법을 알아봅니다."
 date: "2025-03-17"
-thumbnail: /posts/nextjs_blog/setup/thumbnail.png
+thumbnail: /thumbnail/spring_cloud.png
 ---
 
 # API Gateway를 사용한 역할 기반 접근 제어(RBAC) 구현
