docs: mdx 파일 수정

--- a/content/posts/kubernetes/manifast.mdx
+++ b/content/posts/kubernetes/manifast.mdx
@@ -1,5 +1,5 @@
 ---
-title: "manifast 파일 구조 및 작성방법 sdsdsdsdsdsdsdsdsdsdsds"
+title: "manifast 파일 구조 및 작성방법"
 description: "쿠버네티스에서 manifast 파일의 구조와 작성방법에 대해서 알아보겠습니다."
 date: "2025-03-17"
 thumbnail: /thumbnail/kubernetes.png
