--- a/content/posts/spring_cloud/spring-cloud-discovery.mdx
+++ b/content/posts/spring_cloud/spring-cloud-discovery.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Spring Cloud 로 MSA 개발 - 1. Netflix Eureka"
-description: "서비스 디스커버리에 대해서 알아보겠습니다."
+title: "Spring Cloud - Netflix Eureka"
+description: "스프링 클라우드에서 제공하는 서비스 디스커버리인 Netflix Eureka 에 대해 알아보고 간단하게 구현해보도록 하겠습니다."
 date: "2025-04-01"
 thumbnail: /thumbnail/spring_cloud.png
 category: "spring_cloud"
