docs: 쿠버네티스-파드 글 수정

--- a/content/posts/kubernetes/k8s-pod.mdx
+++ b/content/posts/kubernetes/k8s-pod.mdx
@@ -108,7 +108,7 @@ spec:
 
 분명 도커 이미지가 생성된 것을 확인했는데 왜그런걸까요?
 
-## 이미지 `Pull` 정책
+## 이미지 Pull 정책
 
 쿠버네티스는 이미지 풀 정책에 대해서 정의해 두었습니다.
 
@@ -136,7 +136,7 @@ spec:
 그럼 방금 작성한 `manifest` 파일에 이미지 정책을 사용해보도록 하겠습니다.
 
 
-이미지 정책 `manifest` 파일
+### 이미지 정책 manifest 파일
 ``` yaml
 apiVersion: v1
 kind: Pod
