--- a/content/posts/nest/hexagonal-example-nest.mdx
+++ b/content/posts/nest/hexagonal-example-nest.mdx
@@ -9,7 +9,7 @@ category: "nest"
 
 ## 개요
 
-헥사고날 아키텍처는 **포트와 어댑터 패턴(Ports and Adapters Pattern)**이라고도 불리며, 비즈니스 로직을 외부 의존성으로부터 격리시키는 아키텍처 패턴입니다. 이 글에서는 실제 NestJS 프로젝트를 기반으로 각 레이어의 구성요소와 구현 방법을 자세히 살펴보겠습니다.
+헥사고날 아키텍처는 __포트와 어댑터 패턴(Ports and Adapters Pattern)__ 이라고도 불리며, 비즈니스 로직을 외부 의존성으로부터 격리시키는 아키텍처 패턴입니다. 이 글에서는 실제 NestJS 프로젝트를 기반으로 각 레이어의 구성요소와 구현 방법을 자세히 살펴보겠습니다.
 
 ## 헥사고날 아키텍처의 4개 레이어
 
