docs: hexagonal-nest modify

--- a/content/posts/nest/hexagonal-example-nest.mdx
+++ b/content/posts/nest/hexagonal-example-nest.mdx
@@ -1,4 +1,9 @@
-
+---
+title: "헥사고날 아키텍처 (Hexagonal Architecture) 예시 - NestJs"
+description: "Spring Cloud Gateway를 활용하여 Spring Security 없이 역할 기반 접근 제어(RBAC)를 구현하는 방법을 알아봅니다."
+date: "2025-07-03"
+category: "nest"
+---
 
 # 헥사고날 아키텍처(Hexagonal Architecture) 프로젝트 예시
 
